[package]
name = "solana-list-epoch-boundaries"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "list-epoch-boundaries"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive", "env"] }
default-env = "0.1.1"
env_logger = "0.11.5"
log = "0.4.22"
serde = "1.0.130"
solana-client = "2.0.11"
solana-sdk = "2.0.11"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
